// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateGroupScreen renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <Analytics
    screenName={
      Array [
        "communities",
        "create",
      ]
    }
  />
  <Header
    left={
      <IconButton
        name="deleteIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    title="Create Community"
  />
  <ScrollViewMock
    keyboardShouldPersistTaps="handled"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    // @ts-ignore
    <withI18nextTranslation(ImagePicker)
      onSelectImage={[Function]}
    >
      <Flex
        align="center"
        justify="center"
        style={
          Object {
            "backgroundColor": "#005A7F",
            "borderRadius": 4,
            "height": 399.375,
            "marginHorizontal": 20,
            "marginTop": 5,
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../assets/images/cameraIcon.png",
            }
          }
        />
      </Flex>
    </withI18nextTranslation(ImagePicker)>
    <KeyboardAvoidingView
      enabled={true}
      keyboardVerticalOffset={60}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Flex
        style={
          Object {
            "marginTop": 5,
            "paddingHorizontal": 30,
            "paddingTop": 10,
          }
        }
      >
        <MyText
          header={true}
          style={
            Object {
              "color": "#66D9F0",
              "fontSize": 24,
              "marginBottom": 5,
              "textAlign": "center",
            }
          }
        >
          Community Name
        </MyText>
        <Input
          autoCorrect={true}
          autoFocus={true}
          blurOnSubmit={true}
          onChangeText={[Function]}
          placeholder=""
          returnKeyType="done"
          selectionColor="#ffffff"
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 16,
              "textAlign": "center",
            }
          }
          value=""
        />
      </Flex>
    </KeyboardAvoidingView>
  </ScrollViewMock>
  <BottomButton
    disabled={true}
    onPress={[Function]}
    text="Create Community"
  />
</View>
`;

exports[`CreateGroupScreen should disable the button when creating a community 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <Analytics
    screenName={
      Array [
        "communities",
        "create",
      ]
    }
  />
  <Header
    left={
      <IconButton
        name="deleteIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    title="Create Community"
  />
  <ScrollViewMock
    keyboardShouldPersistTaps="handled"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    // @ts-ignore
    <withI18nextTranslation(ImagePicker)
      onSelectImage={[Function]}
    >
      <Flex
        align="center"
        justify="center"
        style={
          Object {
            "backgroundColor": "#005A7F",
            "borderRadius": 4,
            "height": 399.375,
            "marginHorizontal": 20,
            "marginTop": 5,
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../assets/images/cameraIcon.png",
            }
          }
        />
      </Flex>
    </withI18nextTranslation(ImagePicker)>
    <KeyboardAvoidingView
      enabled={true}
      keyboardVerticalOffset={60}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Flex
        style={
          Object {
            "marginTop": 5,
            "paddingHorizontal": 30,
            "paddingTop": 10,
          }
        }
      >
        <MyText
          header={true}
          style={
            Object {
              "color": "#66D9F0",
              "fontSize": 24,
              "marginBottom": 5,
              "textAlign": "center",
            }
          }
        >
          Community Name
        </MyText>
        <Input
          autoCorrect={true}
          autoFocus={true}
          blurOnSubmit={true}
          onChangeText={[Function]}
          placeholder=""
          returnKeyType="done"
          selectionColor="#ffffff"
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 16,
              "textAlign": "center",
            }
          }
          value="Test"
        />
      </Flex>
    </KeyboardAvoidingView>
  </ScrollViewMock>
  <BottomButton
    disabled={true}
    onPress={[Function]}
    text="Create Community"
  />
</View>
`;

exports[`CreateGroupScreen should update the image 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <Analytics
    screenName={
      Array [
        "communities",
        "create",
      ]
    }
  />
  <Header
    left={
      <IconButton
        name="deleteIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    title="Create Community"
  />
  <ScrollViewMock
    keyboardShouldPersistTaps="handled"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    // @ts-ignore
    <withI18nextTranslation(ImagePicker)
      onSelectImage={[Function]}
    >
      <Flex
        align="center"
        justify="center"
        style={
          Object {
            "backgroundColor": "#005A7F",
            "borderRadius": 4,
            "height": 399.375,
            "marginHorizontal": 20,
            "marginTop": 5,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "testuri",
            }
          }
          style={
            Object {
              "borderRadius": 4,
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </Flex>
    </withI18nextTranslation(ImagePicker)>
    <KeyboardAvoidingView
      enabled={true}
      keyboardVerticalOffset={60}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Flex
        style={
          Object {
            "marginTop": 5,
            "paddingHorizontal": 30,
            "paddingTop": 10,
          }
        }
      >
        <MyText
          header={true}
          style={
            Object {
              "color": "#66D9F0",
              "fontSize": 24,
              "marginBottom": 5,
              "textAlign": "center",
            }
          }
        >
          Community Name
        </MyText>
        <Input
          autoCorrect={true}
          autoFocus={true}
          blurOnSubmit={true}
          onChangeText={[Function]}
          placeholder=""
          returnKeyType="done"
          selectionColor="#ffffff"
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 16,
              "textAlign": "center",
            }
          }
          value=""
        />
      </Flex>
    </KeyboardAvoidingView>
  </ScrollViewMock>
  <BottomButton
    disabled={true}
    onPress={[Function]}
    text="Create Community"
  />
</View>
`;
